--- a/show.html
+++ b/show.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <div data-role="page" data-theme="b" data-add-back-btn="true">
+    <div id="show-page" data-role="page" data-theme="b" data-add-back-btn="true">
       <div data-role="header" id="header">
         <h4>图吖</h4>
       </div>
@@ -43,7 +43,7 @@
         </div>
         <div class="clear"></div>
       </div>
-    </div><!-- /page -->
+    </div><!-- /show-page -->
   </body>
 
   <script type="text/javascript" src="js/bin/initStyle.js"></script>
