--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <html>
   <head>
       <meta name="viewport" charset="utf-8" content="width=device-width, minimum-scale=1, maximum-scale=1" />
-      <title>login</title>
+      <title>register</title>
       <!-- <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" /> -->
       <!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> -->
       <!-- <script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script> -->
@@ -12,9 +12,9 @@
       <script src="js/lib/jquery.mobile-1.3.1.min.js"></script>
       <link rel="stylesheet" href="css/src/style.css" />
   </head>
-
+	
   <body>
-    <div id="login-page" data-role="page" data-theme="c" data-add-back-btn="true">
+    <div id="register-page" data-role="page" data-add-back-btn="true">
       <div data-role="content" id="index-content" class="content">
         <img src="images/login_bg.png" class="bg-image" />
         
@@ -23,23 +23,20 @@
         </div>
 
         <div id="login-form">
-          <input type="text" name="name" placeholder="用户名" value="" />
-          <input type="text" name="password" placeholder="密码" value=""/>
-          <a href="javascript:void(0);">忘记密码?</a>
+          <input type="text" name="name" placeholder="电子邮件地址(email)" value="" />
+          <input type="text" name="password" placeholder="密码(password)" value=""/>
+          <input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
+        <label for="checkbox-1">我已经阅读《图吖用户使用注意事项》</label>
         </div> 
 
-        <div id="login-btn">
+       
+        <div id="register-btn">
           <a href="javascript:void(0);" data-role="button" data-theme="f">
-            登录
-          </a>
-        </div>
-        <div id="login-register-btn">
-          <a href="javascript:void(0);" data-role="button">
             注册
           </a>
         </div>
       </div><!-- /content -->
-    </div><!-- /page -->
+    </div><!-- /register-page -->
   </body>
 
   <script type="text/javascript" src="js/bin/initStyle.js"></script>
