--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <img src="images/login_logo.png" />
         </div>
         <div id="login-form">
-          <input type="text" name="email" placeholder="电子邮件地址(email)" value="" />
+          <input type="email" name="email" placeholder="电子邮件地址(email)" value="" />
           <input type="password" name="password" placeholder="密码(password)" value=""/>
           <a href="javascript:void(0);">忘记密码?</a>
         </div> 
@@ -60,7 +60,7 @@
           <img src="images/login_logo.png" />
         </div>
         <div id="register-form">
-          <input type="text" name="email" placeholder="电子邮件地址(email)" value="" />
+          <input type="email" name="email" placeholder="电子邮件地址(email)" value="" />
           <input type="password" name="password" placeholder="密码(password)" value=""/>
           <input type="checkbox" name="checkbox-1" id="checkbox-1" class="custom" />
         <label for="checkbox-1">我已经阅读《图吖用户使用注意事项》</label>
@@ -74,7 +74,7 @@
     </div><!-- /register-page -->
 
     <div id="show-page" data-role="page" data-theme="b" data-add-back-btn="true">
-      <div data-role="header" id="header">
+      <div data-role="header" id="header" data-position="fixed">
         <h4>图吖</h4>
       </div>
       <div data-role="content" id="show-content" class="content">
@@ -96,23 +96,219 @@
                 <span class="show-content">今天天气不错哦~~</span>
               </a>
           </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">今天天气不错哦~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="show-title">Jane</span> <br/> <br />
+                <span class="show-content">最后一个~~</span>
+              </a>
+          </li>
         </ul>
       </div><!-- /content -->
-      <div data-role="footer" id="footer">
-        <div id="footer-container">
-          <div class="footer-button">
-            <img src="images/icon_home.png" />
-          </div>
-          <div class="footer-button">
-            <img src="images/icon_contact.png" />
-          </div>
-          <div class="footer-button">
-            <img src="images/icon_like.png" />
-          </div>
-          <div class="footer-button">
-            <img src="images/icon_setting.png" />
-          </div>
+      <div data-role="footer" id="footer" data-position="fixed">
+        <div id="footer-navbar" data-role="navbar">  
+          <ul>  
+            <li>
+              <a href="#show-page" data-iconpos="top" data-icon="custom" class="ui-btn-active ui-state-persist home">
+                首页
+              </a>
+            </li>  
+            <li>
+              <a href="#contact-page" data-iconpos="top" data-icon="custom" class="contact" >
+                <!-- <img src="images/icon_contact.png" /> -->
+                好友
+              </a>
+            </li>  
+            <li>
+              <a href="#like-page" data-iconpos="top" data-icon="custom" class="like">
+                <!-- <img src="images/icon_like.png" /> -->
+                收藏
+              </a>
+            </li>  
+            <li>
+              <a href="#setting-page" data-iconpos="top" data-icon="custom" class="setting">
+                <!-- <img src="images/icon_setting.png" /> -->
+                设置
+              </a>
+            </li>  
+          </ul>  
+        </div><!-- /navbar -->  
+        <div class="clear"></div>
+      </div>
+    </div><!-- /show-page -->
+
+    <div id="contact-page" data-role="page" data-theme="b" data-add-back-btn="true">
+      <div data-role="header" id="header" data-position="fixed">
+        <h4>图吖</h4>
+      </div>
+      <div data-role="content" id="contact-content" class="content">
+        <div id="contact-search-wrapper">
+          <input type="search" name="search" placeholder="搜索" value="" />
         </div>
+        <ul data-role="listview" data-theme="c" id="mes-list">
+          <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">CyrilZhao</span> <br/> <br />
+                <span class="contact-description">这是我的签名</span>
+              </a>
+          </li>
+          <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+          <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+          <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">这是我的签名~~</span>
+              </a>
+          </li>
+           <li>
+              <a href="">
+                <img src="images/1.jpeg"/>
+                <span class="contact-name">Jane</span> <br/> <br />
+                <span class="contact-description">最后一个~~</span>
+              </a>
+          </li>
+        </ul>
+      </div><!-- /content -->
+      <div data-role="footer" id="footer" data-position="fixed">
+        <div id="footer-navbar" data-role="navbar">  
+          <ul>  
+            <li>
+              <a href="#show-page" data-iconpos="top" data-icon="custom" class="home">
+                首页
+              </a>
+            </li>  
+            <li>
+              <a href="#contact-page" data-iconpos="top" data-icon="custom" class="ui-btn-active ui-state-persist contact" >
+                <!-- <img src="images/icon_contact.png" /> -->
+                好友
+              </a>
+            </li>  
+            <li>
+              <a href="#like-page" data-iconpos="top" data-icon="custom" class="like">
+                <!-- <img src="images/icon_like.png" /> -->
+                收藏
+              </a>
+            </li>  
+            <li>
+              <a href="#setting-page" data-iconpos="top" data-icon="custom" class="setting">
+                <!-- <img src="images/icon_setting.png" /> -->
+                设置
+              </a>
+            </li>  
+          </ul>  
+        </div><!-- /navbar -->  
         <div class="clear"></div>
       </div>
     </div><!-- /show-page -->
