compelete the friend module

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <a href="javascript:void(0);">
                 <img src="images/1.jpeg"/>
                 <span class="contact-name">CyrilZhao</span> <br/> <br />
-                <span class="contact-description">这是我的签名</span>
+                <span class="contact-email">121927532@qq.com</span>
               </a>
           </li> -->
       <!--     <li>
@@ -305,6 +305,76 @@
         <div class="clear"></div>
       </div>
     </div><!-- /show-page -->
+
+    <div id="friend-info-page" data-role="page" data-theme="b" data-add-back-btn="true" class="page">
+      <div data-role="header" class="header" data-position="fixed">
+        <h4>好友个人信息</h4>
+      </div>
+      <div data-role="content" id="friend-info-content" class="content">
+        <div id="friend-avatar">
+          <img src="images/1.jpeg"/>
+        </div>
+
+        <ul data-role="listview" data-theme="c" id="user-info-list"  data-inset="true">
+         <!--  <li>
+            <span style="width:40%;display:inline-block;">用户ID</span>
+            <span style="color:gray;">121927532@qq.com</span>
+          </li>
+          <li>
+            <span style="width:40%;display:inline-block;">真实姓名</span>
+            <span style="color:gray;">CyrilZhao</span>
+          </li>
+           <li>
+            <span style="width:40%;display:inline-block;">性别</span>
+            <span style="color:gray;">男</span>
+          </li>
+          <li>
+            <span style="width:40%;display:inline-block;">电话号码</span>
+            <span style="color:gray;">15902094760</span>
+          </li>
+          <li>
+            <span style="width:40%;display:inline-block;">电子邮件</span>
+            <span style="color:gray;">121927532@qq.com</span>
+          </li> -->
+        </ul>
+
+        <div id="send-message-btn">
+          <a href="#new-message-page" data-theme="f" data-role="button">
+            发消息
+          </a>
+        </div>
+      </div><!-- /content -->
+      <div data-role="footer" class="footer" data-position="fixed">
+        <div id="footer-navbar" data-role="navbar">  
+          <ul>  
+            <li>
+              <a href="#show-page" data-iconpos="top" data-icon="custom" class="home">
+                首页
+              </a>
+            </li>  
+            <li>
+              <a href="#contact-page" data-iconpos="top" data-icon="custom" class="contact  ui-btn-active ui-state-persist" >
+                <!-- <img src="images/icon_contact.png" /> -->
+                好友
+              </a>
+            </li>  
+            <li>
+              <a href="#like-page" data-iconpos="top" data-icon="custom" class="like">
+                <!-- <img src="images/icon_like.png" /> -->
+                收藏
+              </a>
+            </li>  
+            <li>
+              <a href="#setting-page" data-iconpos="top" data-icon="custom" class="setting">
+                <!-- <img src="images/icon_setting.png" /> -->
+                设置
+              </a>
+            </li>  
+          </ul>  
+        </div><!-- /navbar -->  
+        <div class="clear"></div>
+      </div>
+    </div><!-- /setting-page -->
 
     <div id="setting-page" data-role="page" data-theme="b" data-add-back-btn="true" class="page">
       <div data-role="header" class="header" data-position="fixed">
