create the edit page of sending message

--- a/index.html
+++ b/index.html
@@ -374,6 +374,47 @@
         </div><!-- /navbar -->  
         <div class="clear"></div>
       </div>
+    </div><!-- /friend-info-page -->
+
+    <div id="new-message-page" data-role="page" data-theme="b" data-add-back-btn="true" class="page">
+      <div data-role="header" class="header" data-position="fixed">
+        <h4>新消息</h4>
+      </div>
+      <div style="display:none;">
+        <input id="new-picture" type="file">
+      </div>
+      <div data-role="content" id="new-message-content" class="content">
+        <div id="create-picture">
+
+        </div>
+      </div><!-- /content -->
+      <div data-role="footer" class="footer" data-position="fixed">
+        <div id="footer-navbar" data-role="navbar">  
+          <ul>  
+            <li>
+              <a href="#show-page" data-iconpos="top" data-icon="custom" class="home">
+                首页
+              </a>
+            </li>  
+            <li>
+              <a href="" data-iconpos="top" data-icon="custom" class="new-picture" >
+                新图片
+              </a>
+            </li>  
+            <li>
+              <a href="" data-iconpos="top" data-icon="custom" class="add-text">
+                文字
+              </a>
+            </li>  
+            <li>
+              <a href="" data-iconpos="top" data-icon="custom" class="add-voice">
+                声音
+              </a>
+            </li>  
+          </ul>  
+        </div><!-- /navbar -->  
+        <div class="clear"></div>
+      </div>
     </div><!-- /setting-page -->
 
     <div id="setting-page" data-role="page" data-theme="b" data-add-back-btn="true" class="page">
