modify the edit module and component

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               </a>
             </li>  
             <li>
-              <a href="#contact-page" data-iconpos="top" data-icon="custom" class="contact  ui-btn-active ui-state-persist" >
+              <a href="#contact-page" data-iconpos="top" data-icon="custom" class="contact ui-btn-active ui-state-persist" >
                 <!-- <img src="images/icon_contact.png" /> -->
                 好友
               </a>
@@ -384,6 +384,9 @@
         <input id="new-picture" type="file">
       </div>
       <div data-role="content" id="new-message-content" class="content">
+        <div id="edit-area" style="display:none;z-index:999;">
+
+        </div>
         <div id="create-picture">
 
         </div>
